--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See More</a>
+            <a href="https://github.com/jaganAthen" class="btn">See More</a>
         </div>
 
     </div>
