--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
-                        <h3>Wallpapet App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        <h3>Movie Website</h3>
+                        <p>A movie website built with HTML, CSS, and JavaScript would likely have a visually appealing and user-friendly design
                         </p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
