Added new project to portfolio's work section.
Updated the work section of my portfolio with my latest project, highlighting the new features and functionality I added. This update showcases my growth as a developer and my commitment to staying current with industry trends

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png" alt="">
+                    <img src="images/cine-city-bg.jpg" alt="">
                     <div class="layer">
-                        <h3>Movie Website</h3>
-                        <p>A movie website built with HTML, CSS, and JavaScript would likely have a visually appealing and user-friendly design
-                        </p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <h3>Cine City app</h3>
+                        <p>Cine City is a movie booking app using only front-end technologies. Build with HTML, CSS, and JavaScript
+                            </p>
+                        <a href="https://jaganathen.github.io/Cine-City/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
