Optimized function X to improve performance by reducing its time complexity

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <!-- ....................................Header section................................... -->
+    <!-- ................................................Header section.................................................................................. -->
     <div id="header">
         <div class="container">
 
@@ -56,7 +56,7 @@
     </div>
 
 
-    <!--...................................... About section..............................  -->
+    <!--...........................................................................................About section.....................................................................................  -->
     <div id="about">
         <div class="container">
             <div class="row">
@@ -108,7 +108,7 @@
     </div>
 
 
-    <!--.....................................................Services section..................................................... -->
+    <!--.......................................................................................Services section............................................................................................... -->
     <div id="services">
         <div class="container">
             <h1 class="sub-title">My Services</h1>
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <!--...................................................... Portfolio Section ...................................................-->
+    <!--...................................................................................................... Portfolio Section .........................................................................................................-->
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
@@ -148,9 +148,9 @@
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        <p>My app uses HTML, CSS, and JavaScript to enable easy customization of devices with social media wallpapers
                         </p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="#" onclick="showAlert()"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -163,12 +163,12 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" alt="">
+                    <img src="images/portfolio-bg-1.jpg" alt="">
                     <div class="layer">
                         <h3>Portfolio Website</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        <p>My portfolio site features my projects and contact information, built using HTML, CSS, and JavaScript.
                         </p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="#" onclick="showAlert()"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -177,12 +177,12 @@
 
     </div>
 
-    <!-- ........................................................Contact Section................................................. -->
+    <!-- .................................................................................................Contact Section............................................................................................. -->
     <div id="contact">
         <div class="container">
             <div class="row">
 
-                <!-- left side contact section -->
+                <!-- ........left side contact section ................-->
                 <div class="contact-left">
 
                     <h1 class="sub-title">Contact Me</h1>
@@ -202,7 +202,7 @@
                     <a href="images/my-cv.pdf" download class="btn btn-2">Download CV</a>
                 </div>
 
-                <!-- Right side form ,contact section -->
+                <!--........ Right side form ,contact section................ -->
                 <div class="contact-right">
 
                     <form name="submit-to-google-sheet">
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <!-- footer section -->
+        <!--................................................. footer section ......................................................................-->
         <div class="copyright">
             <p>Copyright © 2021- All rights reserved || Designed By: Jagan</p>
             <a href="#header" class="go-to-top">Top <i class="fas fa-arrow-up"></i></a>
@@ -226,7 +226,7 @@
 
 
 
-    <!-- javascript file -->
+    <!-- ........javascript file.............. -->
     <script src="script.js"></script>
 
 </body>
