--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <a href="https://www.instagram.com/jagan.athen/"><i class="fa-brands fa-instagram"></i></a>
 
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn-2">Download CV</a>
+                    <a href="images/Resume.pdf" download class="btn btn-2">Download CV</a>
                 </div>
 
                 <!--........ Right side form ,contact section................ -->
