Added formspree to the contact form
deleted previous method of recieving the form data. added to method from fromspree. without  back end ...

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <!--........ Right side form ,contact section................ -->
                 <div class="contact-right">
 
-                    <form name="submit-to-google-sheet">
+                    <form action="https://formspree.io/f/mwkjaoqa" method="POST">
                         <input type="text" name="Name" id="" placeholder="Your Name">
                         <input type="text" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" placeholder="Your Message" rows="6"></textarea>
