Added New Portfolio Website link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <h3>Portfolio Website</h3>
                         <p>My portfolio site features my projects and contact information, built using HTML, CSS, and JavaScript.
                         </p>
-                        <a href="#" onclick="showAlert()"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://jaganathen.github.io/My-Portfolio/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
