--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- font awsome cdn -->
     <script src="https://kit.fontawesome.com/b2e78ac4c4.js" crossorigin="anonymous"></script>
 
+    <!-- link favicon -->
+    <link rel="shortcut icon" href="images/icons8-human-torch.svg" type="image/x-icon">
+
 
 
 
@@ -46,7 +49,7 @@
                 <p>Front End Developer</p>
                 <h1>I'm <span>Jagannathan </span></h1>
                 <p class="about-p">Designing and coding beautiful websites that bring ideas to life.</p>
-                <a href="https://www.linkedin.com/in/jagannathan-cs-64aa2b244/" class="btn btn-2" id="hire-me-btn">Hire
+                <a href="images/My Resume (1).pdf" download class="btn btn-2" id="hire-me-btn">Hire
                     Me</a>
             </div>
         </div>
@@ -186,7 +189,7 @@
                 <div class="contact-left">
 
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><a href="mailto:jagannathan606@gmail.com?subject=Ready to chat&amp;body=Hi there,"><i
+                    <p><a href="mailto:jagannathan606@gmail.com?subject=Ready to chat&amp;body=Hi there👋"><i
                                 class="fa-solid fa-paper-plane"></i>jagannathan606@gmail.com</a> </p>
                     <p><a href="tel:7736911740"><i class="fa-solid fa-phone"></i>7736911740</a></p>
 
@@ -228,6 +231,8 @@
 
     <!-- ........javascript file.............. -->
     <script src="script.js"></script>
+
+
 
 </body>
 
