--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <h3>Portfolio Website</h3>
                         <p>My portfolio site features my projects and contact information, built using HTML, CSS, and JavaScript.
                         </p>
-                        <a href="hhttps://jaganathen.github.io/Personal-Website/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://jaganathen.github.io/Personal-Website/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
