--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Front End Developer</p>
                 <h1>I'm <span>Jagannathan </span></h1>
                 <p class="about-p">Designing and coding beautiful websites that bring ideas to life.</p>
-                <a href="images/My Resume (1).pdf" download class="btn btn-2" id="hire-me-btn">Hire
+                <a href="images/My Resume.pdf" download class="btn btn-2" id="hire-me-btn">Hire
                     Me</a>
             </div>
         </div>
