--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
                     <div class="social-icons">
 
-                        <a href="https://github.com/jaganAthen"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/jagannathan606"><i class="fa-brands fa-github"></i></a>
                         <a href="https://twitter.com/Jagan_Athen"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/jagannathan-cs-64aa2b244/"><i
                                 class="fa-brands fa-linkedin"></i></a>
