--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Front End Developer</p>
                 <h1>I'm <span>Jagannathan </span></h1>
                 <p class="about-p">Designing and coding beautiful websites that bring ideas to life.</p>
-                <a href="images/My Resume.pdf" download class="btn btn-2" id="hire-me-btn">Hire
+                <a href="images/Jagannathan CS-Resume.pdf" download class="btn btn-2" id="hire-me-btn">Hire
                     Me</a>
             </div>
         </div>
@@ -202,7 +202,7 @@
                         <a href="https://www.instagram.com/jagan.athen/"><i class="fa-brands fa-instagram"></i></a>
 
                     </div>
-                    <a href="images/My Resume.pdf" download class="btn btn-2">Download CV</a>
+                    <a href="images/Jagannathan CS-Resume.pdf" download class="btn btn-2">Download CV</a>
                 </div>
 
                 <!--........ Right side form ,contact section................ -->
