--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                 </div>
             </div>
-            <a href="https://github.com/jaganAthen" class="btn">See More</a>
+            <a href="https://github.com/jagannathan606" class="btn">See More</a>
         </div>
 
     </div>
